ARCH_HEADER_FILES=arch/adc.h arch/io.h arch/irq.h arch/spi.h arch/stack.h arch/twi.h arch/types.h arch/usart.h arch/avr/adc.h arch/avr/interrupts.h arch/avr/io.h arch/avr/pgm.h arch/avr/pwm.h arch/avr/spif.h arch/avr/timer.h arch/avr/stack.h arch/avr/twif.h arch/avr/types.h arch/avr/328/interrupts.h arch/avr/328/io.h arch/avr/328/timer.h arch/avr/328/dev/adc.h arch/avr/328/dev/spibus.h arch/avr/328/dev/spireg.h arch/avr/328/dev/twibus.h arch/avr/328/dev/twireg.h arch/avr/328/chip/spi.h arch/avr/328/chip/uart.h arch/avr/arduino/io.h

DEV_HEADER_FILES=dev/adc.h dev/dev.h dev/error.h dev/i2c.h dev/i2c-core.h dev/i2c-msg.h dev/i2c-reg.h dev/pwmdev.h dev/spibus.h dev/twidev.h dev/twif.h dev/usartif.h dev/i2c/i2c.h dev/i2c/i2c-core.h dev/i2c/i2c-msg.h dev/i2c/reg.h dev/i2c/busses/atmega.h dev/pwm/pwm.h dev/pwm/busses/atmega.h dev/usart/usart.h dev/usart/busses/atmega_usart.h

FS_HEADER_FILES=fs/vfile.h fs/vfs.h

LIB_HEADER_FILES=lib/24c02.h lib/binary.h lib/spiram.h lib/string.h lib/list/linkedlist.h lib/list/list.h lib/list/rcu.h lib/list/xorlist.h lib/list/xorlist_error.h

NET_HEADER_FILES=net/netbuff.h net/netdev.h net/tokenbucket.h net/core/dev.h net/core/vlan.h

NETINET_HEADER_FILES=netinet/in.h

SYS_HEADER_FILES=sys/epl.h sys/mem.h sys/out.h sys/sched.h sys/thread.h sys/virt_timer.h sys/events/event.h

bermudaosdir=$(includedir)/bermudaos
nobase_bermudaos_HEADERS=bermuda.h cplusplus.h doxyindex.h stdasm.h stddef.h stdio.h stdlib.h string.h $(ARCH_HEADER_FILES) $(DEV_HEADER_FILES) $(FS_HEADER_FILES) $(LIB_HEADER_FILES) $(NET_HEADER_FILES) $(NETINET_HEADER_FILES) $(SYS_HEADER_FILES)

