noinst_LTLIBRARIES=libstdio.la
libstdio_la_SOURCES=fgetc.c fputc.c getc.c putc.c vfprintf.c vfprintf_p.c write.c read.c mode.c \
                    open.c close.c flush.c fdputc.c fdgetc.c convert.c write_p.c printf.c \
                    printf_p.c fwrite.c fprintf.c fprintf_p.c logmsg_p.c
include ../../../../Makefile.flags
